BUG (duels): fix game mode tooltip not showing when mousing over rank icon in duels tab

--- a/core/src/css/component/duels/desktop/duels-run.component.scss
+++ b/core/src/css/component/duels/desktop/duels-run.component.scss
@@ -96,6 +96,7 @@
 	}
 
 	.rating {
+		pointer-events: none;
 		position: absolute;
 		bottom: 1px;
 		text-shadow: -1px -1px 0 #000, 0px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 0px 1px 0 #000, 1px 1px 0 #000;
